@@ -64,7 +64,7 @@ typedef int errno_t;
 
 /* Copying functions: */
 extern void *memcpy (void * /*restrict */ dest, const void * /*restrict*/ src, size_t n);
-#if defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka) || defined(__SDCC_tlcs90)
+#if defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r3ka)
 extern void *memmove (void *dest, const void *src, size_t n) __preserves_regs(iyl, iyh);
 #else
 extern void *memmove (void *dest, const void *src, size_t n);
